[package]
name = "withdraw-commission"
version = "0.1.0"
edition = "2021"
author = ["Collin Brittain <collin@peggy.cool>"]

[dependencies]
cosmrs = { version = "0.20.0", features = ["rpc", "tendermint-rpc", "grpc"] }
eyre = "0.6.12"
hex = "0.4.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.12.2"
clap = { version = "4.3", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
